--- a/src/main/resources/super_puper_mega_programmisty/blender/main-window.fxml
+++ b/src/main/resources/super_puper_mega_programmisty/blender/main-window.fxml
@@ -3,9 +3,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-
-<BorderPane xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="super_puper_mega_programmisty.blender.app.BlenderController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="super_puper_mega_programmisty.blender.app.BlenderController">
     <center>
         <AnchorPane prefHeight="400.0" prefWidth="600.0">
 
@@ -14,13 +12,23 @@
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
-                <Menu mnemonicParsing="false" text="File">
+                <Menu mnemonicParsing="false" text="Файл">
                     <items>
-                        <MenuItem mnemonicParsing="false" text="Open" />
-                        <MenuItem mnemonicParsing="false" text="Save" />
-                        <MenuItem mnemonicParsing="false" text="Save As" />
+                        <MenuItem mnemonicParsing="false" text="Открыть" />
+                        <MenuItem mnemonicParsing="false" text="Сохранить" />
+                        <MenuItem mnemonicParsing="false" text="Сохранить как" />
                     </items>
                 </Menu>
+            <Menu mnemonicParsing="false" text="Объекты">
+               <items>
+                  <Menu mnemonicParsing="false" text="Создать">
+                    <items>
+                      <MenuItem mnemonicParsing="false" text="Камера" />
+                    </items>
+                  </Menu>
+                  <MenuItem mnemonicParsing="false" text="Удалить" />
+               </items>
+            </Menu>
             </menus>
         </MenuBar>
     </top>
