--- a/src/main/resources/super_puper_mega_programmisty/blender/main-window.fxml
+++ b/src/main/resources/super_puper_mega_programmisty/blender/main-window.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import super_puper_mega_programmisty.blender.app.ScrollableDoubleField?>
 <BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="super_puper_mega_programmisty.blender.app.BlenderController">
     <top>
@@ -55,13 +56,13 @@
                 <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
                     <children>
                         <Label prefWidth="15" text="X"/>
-                        <TextField fx:id="posX" alignment="CENTER" onAction="#updatePos" prefWidth="40" text="0"/>
+                        <ScrollableDoubleField fx:id="posX" alignment="CENTER" onAction="#updatePos" prefWidth="40"/>
                         <Separator orientation="VERTICAL" prefWidth="10" visible="false"/>
                         <Label prefWidth="15" text="Y"/>
-                        <TextField fx:id="posY" alignment="CENTER" onAction="#updatePos" prefWidth="40" text="0"/>
+                        <ScrollableDoubleField fx:id="posY" alignment="CENTER" onAction="#updatePos" prefWidth="40"/>
                         <Separator orientation="VERTICAL" prefWidth="10" visible="false"/>
                         <Label prefWidth="15" text="Z"/>
-                        <TextField fx:id="posZ" alignment="CENTER" onAction="#updatePos" prefWidth="40" text="0"/>
+                        <ScrollableDoubleField fx:id="posZ" alignment="CENTER" onAction="#updatePos" prefWidth="40"/>
                     </children>
                 </HBox>
                 <Separator prefHeight="5" visible="false"/>
@@ -69,13 +70,13 @@
                 <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
                     <children>
                         <Label prefWidth="15" text="X"/>
-                        <TextField fx:id="rotX" alignment="CENTER" onAction="#updateRotation" prefWidth="40" text="0"/>
+                        <ScrollableDoubleField fx:id="rotX" alignment="CENTER" onAction="#updateRotation" prefWidth="40"/>
                         <Separator orientation="VERTICAL" prefWidth="10" visible="false"/>
                         <Label prefWidth="15" text="Y"/>
-                        <TextField fx:id="rotY" alignment="CENTER" onAction="#updateRotation" prefWidth="40" text="0"/>
+                        <ScrollableDoubleField fx:id="rotY" alignment="CENTER" onAction="#updateRotation" prefWidth="40"/>
                         <Separator orientation="VERTICAL" prefWidth="10" visible="false"/>
                         <Label prefWidth="15" text="Z"/>
-                        <TextField fx:id="rotZ" alignment="CENTER" onAction="#updateRotation" prefWidth="40" text="0"/>
+                        <ScrollableDoubleField fx:id="rotZ" alignment="CENTER" onAction="#updateRotation" prefWidth="40"/>
                     </children>
                 </HBox>
                 <Separator layoutX="10.0" layoutY="75.0" prefHeight="5" visible="false"/>
@@ -83,13 +84,13 @@
                 <HBox alignment="CENTER" prefHeight="30.0" prefWidth="200.0">
                     <children>
                         <Label prefWidth="15" text="X"/>
-                        <TextField fx:id="scaleX" alignment="CENTER" onAction="#updateScale" prefWidth="40" text="1"/>
+                        <ScrollableDoubleField fx:id="scaleX" alignment="CENTER" onAction="#updateScale" prefWidth="40" text="1"/>
                         <Separator orientation="VERTICAL" prefWidth="10" visible="false"/>
                         <Label prefWidth="15" text="Y"/>
-                        <TextField fx:id="scaleY" alignment="CENTER" onAction="#updateScale" prefWidth="40" text="1"/>
+                        <ScrollableDoubleField fx:id="scaleY" alignment="CENTER" onAction="#updateScale" prefWidth="40" text="1"/>
                         <Separator orientation="VERTICAL" prefWidth="10" visible="false"/>
                         <Label prefWidth="15" text="Z"/>
-                        <TextField fx:id="scaleZ" alignment="CENTER" onAction="#updateScale" prefWidth="40" text="1"/>
+                        <ScrollableDoubleField fx:id="scaleZ" alignment="CENTER" onAction="#updateScale" prefWidth="40" text="1"/>
                     </children>
                 </HBox>
                 <Separator prefHeight="20" visible="false"/>
