--- a/src/main/resources/super_puper_mega_programmisty/blender/main-window.fxml
+++ b/src/main/resources/super_puper_mega_programmisty/blender/main-window.fxml
@@ -4,47 +4,51 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import super_puper_mega_programmisty.blender.app.*?>
 
-<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="super_puper_mega_programmisty.blender.app.BlenderController">
+<BorderPane xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="super_puper_mega_programmisty.blender.app.BlenderController">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
                 <Menu mnemonicParsing="false" text="Файл">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#loadModel" text="Открыть" />
-                        <MenuItem mnemonicParsing="false" onAction="#clearScene" text="Очистить сцену" />
+                        <MenuItem mnemonicParsing="false" onAction="#loadModel" text="Открыть"/>
+                        <MenuItem mnemonicParsing="false" onAction="#clearScene" text="Очистить сцену"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Объект">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#selectNext" text="Выбрать следующий" />
-                        <MenuItem mnemonicParsing="false" onAction="#selectPrev" text="Выбрать предыдущий" />
+                        <MenuItem mnemonicParsing="false" onAction="#selectNext" text="Выбрать следующий"/>
+                        <MenuItem mnemonicParsing="false" onAction="#selectPrev" text="Выбрать предыдущий"/>
                         <Menu mnemonicParsing="false" text="Добавить">
                             <items>
-                                <MenuItem mnemonicParsing="false" onAction="#addCamera" text="Камера" />
-                                <MenuItem mnemonicParsing="false" onAction="#addLumination" text="Освещение" />
+                                <MenuItem mnemonicParsing="false" onAction="#addCamera" text="Камера"/>
+                                <MenuItem mnemonicParsing="false" onAction="#addLumination" text="Освещение"/>
                             </items>
                         </Menu>
-                        <MenuItem mnemonicParsing="false" onAction="#deleteObject" text="Удалить" />
+                        <MenuItem mnemonicParsing="false" onAction="#deleteObject" text="Удалить"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Камера">
                     <items>
-                        <MenuItem mnemonicParsing="false" onAction="#nextCamera" text="Следующая" />
-                        <MenuItem mnemonicParsing="false" onAction="#prevCamera" text="Предыдущая" />
+                        <MenuItem mnemonicParsing="false" onAction="#nextCamera" text="Следующая"/>
+                        <MenuItem mnemonicParsing="false" onAction="#prevCamera" text="Предыдущая"/>
                     </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Сцена">
                     <items>
-                        <CheckMenuItem fx:id="luminationSwitch" mnemonicParsing="false" onAction="#switchLumination" text="Применять освещение" />
-                        <CheckMenuItem fx:id="polygonGridSwitch" mnemonicParsing="false" onAction="#switchPolygonGrid" text="Показывать полигональную сетку" />
+                        <CheckMenuItem fx:id="luminationSwitch" mnemonicParsing="false" onAction="#switchLumination"
+                                       text="Применять освещение"/>
+                        <CheckMenuItem fx:id="polygonGridSwitch" mnemonicParsing="false" onAction="#switchPolygonGrid"
+                                       text="Показывать полигональную сетку"/>
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
     </top>
     <center>
-        <Canvas fx:id="canvas" height="400.0" width="600.0" BorderPane.alignment="CENTER" />
+        <Canvas fx:id="canvas" height="400.0" width="600.0" BorderPane.alignment="CENTER"/>
     </center>
     <right>
         <ScrollPane hbarPolicy="NEVER" prefHeight="400.0" prefWidth="200.0" BorderPane.alignment="CENTER">
@@ -55,18 +59,18 @@
 
                             <Label fx:id="objectLabel" prefHeight="30" text="Null" textAlignment="CENTER">
                                 <font>
-                                    <Font name="System Bold" size="14.0" />
+                                    <Font name="System Bold" size="14.0"/>
                                 </font>
                             </Label>
-                            <Separator prefHeight="5" />
+                            <Separator prefHeight="5"/>
 
                             <VBox fx:id="objectMenu" alignment="TOP_CENTER" prefWidth="180.0">
-
                             </VBox>
 
-                            <Separator prefHeight="15" visible="false" />
-                            <CheckBox fx:id="activeSwitch" mnemonicParsing="false" onAction="#switchActive" selected="true" text="Активен" />
-                            <Separator prefHeight="15" visible="false" />
+                            <Separator prefHeight="15" visible="false"/>
+                            <CheckBox fx:id="activeSwitch" mnemonicParsing="false" onAction="#switchActive"
+                                      selected="true" text="Активен"/>
+                            <Separator prefHeight="15" visible="false"/>
 
                         </VBox>
                     </children>
