--- a/src/main/resources/super_puper_mega_programmisty/blender/model-menu.fxml
+++ b/src/main/resources/super_puper_mega_programmisty/blender/model-menu.fxml
@@ -71,6 +71,11 @@
         <Label text="blesk"/>
         <Slider majorTickUnit="2.0" max="12.0" minorTickCount="1" snapToTicks="true" fx:id="bleskSlider"
                 onDragDetected="#onBleskSliderDrag" value="6"/>
+        <Separator prefHeight="10" visible="false"/>
+
+        <Label text="Прозрачность"/>
+        <Slider majorTickUnit="0.001" max="1.0" minorTickCount="1" snapToTicks="true" fx:id="alphaSlider"
+                onDragDetected="#onAlphaSliderDrag" value="1"/>
         <Separator prefHeight="15" visible="false"/>
 
         <Button mnemonicParsing="false" text="Применить текстуру" onAction="#applyTexture"/>
